--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,10 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true
     }
+
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
 
 // ADD THIS AT THE BOTTOM
