--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
-        applicationId "au.com.beba.cleanproject"
+        applicationId "au.com.beba.phaserizer"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
