--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin.kotlinVersion}"
 
         // NOTE: Do not place your application dependencies here; they belong
