[demo] Add multi-parallel example

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".StaticMixedChainActivity"/>
 
         <activity android:name=".AddSerialToChainActivity"/>
+        <activity android:name=".MultiParallelChainActivity" />
     </application>
 
 </manifest>
