[demo] Simple chain pause for UI interaction

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
 
         <activity android:name=".AddSerialToChainActivity"/>
         <activity android:name=".MultiParallelChainActivity" />
+        <activity android:name=".StopForUiChainActivity" />
     </application>
 
 </manifest>
