--- a/chainreaction/build.gradle
+++ b/chainreaction/build.gradle
@@ -31,17 +31,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
 
-    // Kotlin AND Anko
+    // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:${kotlin.kotlinVersion}"
-    // sdk23 also available
-    implementation "org.jetbrains.anko:anko-sdk25:${kotlin.ankoVersion}"
-    // support-v4 bindings
-    implementation "org.jetbrains.anko:anko-support-v4:${kotlin.ankoVersion}"
-    // appcompat-v7 bindings
-    implementation "org.jetbrains.anko:anko-appcompat-v7:${kotlin.ankoVersion}"
-
 }
 
 // TEST
